--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = "http://example.com/"
 languageCode = "en-us"
 title = "Minimal"
 theme = "minimal"
+publishDir = "docs"
 disqusShortname = "username" # delete this to disable disqus comments
 googleAnalytics = ""
 
