--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://rafaelo93.github.io/"
+baseURL = "https://rafaelo93.github.io/lab1-parte3/"
 languageCode = "en-us"
 title = "Minimal"
 theme = "minimal"
